[project]
name = "my-org-home-shell"
version = "0.1.0"
description = "Backend for India Segmentation Home Shell Superset extension — serves LCA segmentation aggregates"
requires-python = ">=3.10"
dependencies = [
  "flask>=2.3",
  "flask-appbuilder>=4.3",
  "apache-superset-core>=0.1.0rc2",
  "sqlalchemy>=1.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.apache_superset_extensions.build]
include = ["src/**/*.py"]
exclude = ["tests/**/*", "**/*.pyc"]
